--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
-  },
-  "dependencies": {
-    "sass": "^1.62.1"
   }
 }
